
  * Ignore the 'maven clean' errors when building with debhelper
  * Do not run the tests when DEB_BUILD_OPTIONS=nocheck is specified
    (Closes: #737988)
  * Changed the debian/rules template to use DH by default instead of CDBS.
    A rules file using CDBS can still be generated by adding the --cdbs
    parameter to mh_make (Closes: #786340)

 -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Nov 2015 10:10:31 +0100

maven-debian-helper (1.6.13) unstable; urgency=medium

  * Don't install the documentation jar by default (Closes: #711852)

 -- Emmanuel Bourg <ebourg@apache.org>  Tue, 29 Sep 2015 17:35:10 +0200

maven-debian-helper (1.6.12) unstable; urgency=medium

  * Set the locale to en_US when generating the javadoc
    to make the builds reproducible

 -- Emmanuel Bourg <ebourg@apache.org>  Fri, 19 Jun 2015 23:59:50 +0200

maven-debian-helper (1.6.11) unstable; urgency=medium

  * Upload to unstable
  * Removed the timestamp from the javadoc files to make the builds reproducible
  * Export the DEB_CHANGELOG_DATETIME variable with the date of the latest entry
    in debian/changelog
  * Accept libmaven-compiler-plugin-java (<< 3.0) as an alternative dependency

 -- Emmanuel Bourg <ebourg@apache.org>  Tue, 05 May 2015 19:51:25 +0200

maven-debian-helper (1.6.10) experimental; urgency=medium

  * Team upload.
  * Replace dependency on libmaven-compiler-plugin-java with
    libmaven-compiler-plugin-2.5-java.

 -- Miguel Landaeta <nomadium@debian.org>  Sat, 07 Mar 2015 21:10:26 -0300

maven-debian-helper (1.6.9) unstable; urgency=medium

  * Marked jacoco-maven-plugin as a documentation plugin
  * Added org.sonatype.plugins:nexus-staging-maven-plugin to the ignored
    plugins
  * Use the uscan --no-symlink option instead of --rename in the generated
    debian/rule get-orig-source target to work around #748462
  * mh_make: Fixed the error displayed when DEBFULLNAME/DEBEMAIL is not defined
  * The generated control file now specifies Standards-Version: 3.9.6