@@ -1,0 +1,2 @@
+version=3
+https://github.com/${userId}/${repository}/tags .*/(?:.*?)([\d\.]+)\.tar\.gz
