@@ -6,6 +6,7 @@ maven-debian-helper (1.6.14) UNRELEASED; urgency=medium
   * Changed the debian/rules template to use DH by default instead of CDBS.
     A rules file using CDBS can still be generated by adding the --cdbs
     parameter to mh_make (Closes: #786340)
+  * Generate debian/watch for GitHub projects
 
  -- Emmanuel Bourg <ebourg@apache.org>  Thu, 12 Nov 2015 10:10:31 +0100
 
